--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -116,7 +116,7 @@ steps:
       appName: "$(appName)"
       package: "$(System.DefaultWorkingDirectory)/**/*.zip"
       startUpCommand: "/home/site/wwwroot/m4d"
-      appSettings: -SELF_CONTAINED_DEPLOYMENT true -ASPNETCORE_ENVIRONMENT $(aspnetEnvironment) -SEARCHINDEX $(searchIndex) -SEARCHINDEXVERSION $(searchIndexVersion) -WEBSITES_INCLUDE_CLOUD_CERTS true
+      appSettings: -SELF_CONTAINED_DEPLOYMENT true -ASPNETCORE_ENVIRONMENT $(aspnetEnvironment) -SEARCHINDEX $(searchIndex) -SEARCHINDEXVERSION $(searchIndexVersion) -WEBSITES_INCLUDE_CLOUD_CERTS true -WEBSITES_CONTAINER_START_TIME_LIMIT 600
 
   # Framework-Dependent Deployment
   - task: AzureWebApp@1
@@ -129,4 +129,4 @@ steps:
       package: "$(System.DefaultWorkingDirectory)/**/*.zip"
       runtimeStack: "DOTNETCORE|10.0"
       startUpCommand: "dotnet m4d.dll"
-      appSettings: -SELF_CONTAINED_DEPLOYMENT false -ASPNETCORE_ENVIRONMENT $(aspnetEnvironment) -SEARCHINDEX $(searchIndex) -SEARCHINDEXVERSION $(searchIndexVersion) -WEBSITES_INCLUDE_CLOUD_CERTS true
+      appSettings: -SELF_CONTAINED_DEPLOYMENT false -ASPNETCORE_ENVIRONMENT $(aspnetEnvironment) -SEARCHINDEX $(searchIndex) -SEARCHINDEXVERSION $(searchIndexVersion) -WEBSITES_INCLUDE_CLOUD_CERTS true -WEBSITES_CONTAINER_START_TIME_LIMIT 600
