--- a/m4d/m4d.csproj
+++ b/m4d/m4d.csproj
@@ -1,7 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <Project Sdk="Microsoft.NET.Sdk.Web">
   <PropertyGroup>
-    <TargetFramework>net9.0</TargetFramework>
+    <TargetFramework>net10.0</TargetFramework>
     <ImplicitUsings>enable</ImplicitUsings>
     <UserSecretsId>60050f39-d7c1-4b33-8b65-1e6cbb538661</UserSecretsId>
   </PropertyGroup>
@@ -18,6 +18,7 @@
     <PublishTrimmed>false</PublishTrimmed>
     <IncludeNativeLibrariesForSelfExtract>true</IncludeNativeLibrariesForSelfExtract>
     <IncludeAllContentForSelfExtract>true</IncludeAllContentForSelfExtract>
+    <!-- Note: MapStaticAssets() manifest doesn't work with PublishSingleFile, use UseStaticFiles() in code instead -->
   </PropertyGroup>
   <ItemGroup>
     <Content Include="wwwroot\vclient\.vite\**" CopyToPublishDirectory="PreserveNewest" Exclude="$(DefaultItemExcludes)" />
