Get in some integration testing.

--- a/m4d.Tests/m4d.Tests.csproj
+++ b/m4d.Tests/m4d.Tests.csproj
@@ -28,5 +28,7 @@
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\m4d\m4d.csproj" />
+    <ProjectReference Include="..\m4dModels.Tests\m4dModels.Tests.csproj" />
   </ItemGroup>
 </Project>
+
