--- a/m4d/ClientApp/package.json
+++ b/m4d/ClientApp/package.json
@@ -17,59 +17,59 @@
     "format": "prettier --write src/"
   },
   "dependencies": {
-    "@vueuse/core": "^13.9.0",
-    "@vueuse/integrations": "^13.9.0",
-    "axios": "^1.12.2",
+    "@vueuse/core": "^14.2.0",
+    "@vueuse/integrations": "^14.2.0",
+    "axios": "^1.13.5",
     "bootstrap": "^5.3.8",
     "bootstrap-icons": "^1.13.1",
-    "bootstrap-vue-next": "^0.40.5",
+    "bootstrap-vue-next": "^0.43.1",
     "date-fns": "^4.1.0",
-    "focus-trap": "^7.6.5",
+    "focus-trap": "^8.0.0",
     "jquery": "^3.7.1",
-    "jquery-validation": "^1.21.0",
+    "jquery-validation": "^1.22.0",
     "jquery-validation-unobtrusive": "^4.0.0",
     "markdowndeep": "^1.6.12",
     "typedjson": "^1.8.0",
     "uuid": "^13.0.0",
-    "vue": "^3.5.22",
+    "vue": "^3.5.28",
     "vue-showdown": "^4.2.0"
   },
   "devDependencies": {
-    "@iconify-json/bi": "^1.2.6",
-    "@tsconfig/node18": "^18.2.4",
+    "@iconify-json/bi": "^1.2.7",
+    "@tsconfig/node18": "^18.2.6",
     "@types/bootstrap": "^5.2.10",
     "@types/jquery": "^3.5.33",
-    "@types/jsdom": "^21.1.7",
-    "@types/node": "^24.5.2",
+    "@types/jsdom": "^27.0.0",
+    "@types/node": "^25.2.2",
     "@types/uuid": "^11.0.0",
-    "@typescript-eslint/utils": "^8.44.1",
-    "@vitejs/plugin-vue": "^6.0.1",
-    "@vitest/eslint-plugin": "^1.3.13",
-    "@vitest/ui": "^3.2.4",
-    "@vue/compiler-dom": "^3.5.22",
-    "@vue/compiler-sfc": "^3.5.22",
+    "@typescript-eslint/utils": "^8.55.0",
+    "@vitejs/plugin-vue": "^6.0.4",
+    "@vitest/eslint-plugin": "^1.6.6",
+    "@vitest/ui": "^4.0.18",
+    "@vue/compiler-dom": "^3.5.28",
+    "@vue/compiler-sfc": "^3.5.28",
     "@vue/eslint-config-prettier": "^10.2.0",
     "@vue/eslint-config-typescript": "^14.6.0",
-    "@vue/server-renderer": "^3.5.22",
+    "@vue/server-renderer": "^3.5.28",
     "@vue/test-utils": "^2.4.6",
     "@vue/tsconfig": "^0.8.1",
-    "eslint": "^9.36.0",
-    "eslint-plugin-vue": "^10.5.0",
+    "eslint": "^10.0.0",
+    "eslint-plugin-vue": "^10.7.0",
     "fast-glob": "^3.3.3",
-    "jiti": "^2.6.0",
-    "jsdom": "^27.0.0",
+    "jiti": "^2.6.1",
+    "jsdom": "^28.0.0",
     "npm-run-all2": "^8.0.4",
-    "prettier": "^3.6.2",
-    "sass": "^1.93.2",
-    "typescript": "~5.9.2",
-    "unplugin-icons": "^22.3.0",
-    "unplugin-vue-components": "^29.1.0",
-    "vite": "^7.2.3",
+    "prettier": "^3.8.1",
+    "sass": "^1.97.3",
+    "typescript": "^5.9.3",
+    "unplugin-icons": "^23.0.1",
+    "unplugin-vue-components": "^31.0.0",
+    "vite": "^7.3.1",
     "vite-plugin-inspect": "^11.3.3",
-    "vite-plugin-mkcert": "^1.17.8",
-    "vitest": "^3.2.4",
+    "vite-plugin-mkcert": "^1.17.9",
+    "vitest": "^4.0.18",
     "vue-eslint-parser": "^10.2.0",
-    "vue-tsc": "^3.1.0"
+    "vue-tsc": "^3.2.4"
   },
   "resolutions": {
     "strip-ansi": "6.0.1",
