--- a/m4d/appsettings.json
+++ b/m4d/appsettings.json
@@ -42,5 +42,12 @@
     "PackageManager": "yarn",
     "PackageDirectory": "ClientApp",
     "IgnoreMissingAssets": true
+  },
+  "UsageTracking": {
+    "Enabled": true,
+    "AnonymousThreshold": 3,
+    "AnonymousBatchSize": 5,
+    "AuthenticatedBatchSize": 1,
+    "MaxQueueSize": 100
   }
 }
