Integrate and clean up

--- a/m4d/appsettings.Development.json
+++ b/m4d/appsettings.Development.json
@@ -21,6 +21,7 @@
     "CustomerReminder": true,
     "GoogleTagManager": false,
     "GoogleTags": false,
-    "UsageLogging": true
+    "UsageLogging": true,
+    "ClientSideUsageLogging": true
   }
 }
