--- a/m4d/m4d.csproj
+++ b/m4d/m4d.csproj
@@ -68,6 +68,9 @@
   <ItemGroup>
     <WCFMetadata Include="Connected Services" />
   </ItemGroup>
+  <ItemGroup>
+    <Folder Include="Filters\" />
+  </ItemGroup>
   <Target Name="assets" BeforeTargets="Build">
     <ItemGroup>
       <BootstrapIcons Include=".\ClientApp\node_modules\bootstrap-icons\font\fonts\bootstrap-icons.*" />
