Rate limit access to identity pages

--- a/m4d/appsettings.json
+++ b/m4d/appsettings.json
@@ -49,5 +49,9 @@
     "AnonymousBatchSize": 5,
     "AuthenticatedBatchSize": 1,
     "MaxQueueSize": 100
+  },
+  "RateLimiting": {
+    "MaxRequestsPerWindow": 20,
+    "WindowMinutes": 1
   }
 }
